[package]
name = "r_wisckey"
version = "0.1.0"
edition = "2018"
authors = ["潘吉祥"]
description = "基于wisckey 论文的LSM存储引擎"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.14"
env_logger = "0.9.0"
crossbeam = "0.8.0"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
rayon = "1.5.1"
num_cpus = "1.13.0"
failure = "0.1.8"
clap = "2.33.0"
structopt = "0.2.15"