[package]
name = "r_wisckey"
version = "0.3.0"
edition = "2018"
authors = ["潘吉祥","1121153008@qq.com"]
description = "基于wisckey 论文的LSM存储引擎"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
bincode = "1.3.3"
crc32fast = "1.2.1"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.45"
thiserror = "1.0.30"
config = "~0.11.0"
lazy_static = "~1.4.0"
clap = "2.33.3"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
#crossbeam = "0.8.0"
#crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
#rayon = "1.5.1"
#num_cpus = "1.13.0"
#uuid = { version = "~0.8.2", features = ["v4"] }
